v0.25.0/_sources/content/user-guide/examples/01-maps/plot_sumMap.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "content/user-guide/examples/01-maps/plot_sumMap.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_content_user-guide_examples_01-maps_plot_sumMap.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_content_user-guide_examples_01-maps_plot_sumMap.py:


Maps: ComboMaps
===============

Invert synthetic magnetic data with variable background values
and a single block anomaly buried at depth. We will use the Sum Map
to invert for both the background values and an heterogeneous susceptibiilty
model.

.. code-block:: python
    :linenos:

.. GENERATED FROM PYTHON SOURCE LINES 15-208



.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /content/user-guide/examples/01-maps/images/sphx_glr_plot_sumMap_001.png
         :alt: plot sumMap
         :srcset: /content/user-guide/examples/01-maps/images/sphx_glr_plot_sumMap_001.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /content/user-guide/examples/01-maps/images/sphx_glr_plot_sumMap_002.png
         :alt: plot sumMap
         :srcset: /content/user-guide/examples/01-maps/images/sphx_glr_plot_sumMap_002.png
         :class: sphx-glr-multi-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/vsts/work/1/s/simpeg/utils/model_builder.py:37: BreakingChangeWarning:

    Since SimPEG v0.25.0, the 'get_indices_block' function returns a single array with the cell indices, instead of a tuple with a single element. This means that we don't need to unpack the tuple anymore to access to the cell indices.
    If you were using this function as in:

        ind = get_indices_block(p0, p1, mesh.cell_centers)[0]

    Make sure you update it to:

        ind = get_indices_block(p0, p1, mesh.cell_centers)

    To hide this warning, add this to your script or notebook:

        import warnings
        from simpeg.utils import BreakingChangeWarning

        warnings.filterwarnings(action='ignore', category=BreakingChangeWarning)



    Running inversion with SimPEG v0.25.0
    ================================================= Projected GNCG =================================================
      #     beta     phi_d     phi_m       f      |proj(x-g)-x|  LS   iter_CG   CG |Ax-b|/|b|  CG |Ax-b|   Comment   
    -----------------------------------------------------------------------------------------------------------------
       0  6.10e+05  9.11e+06  4.27e-04  9.12e+06                         0           inf          inf                
       1  6.10e+05  1.38e+05  7.05e-02  1.81e+05    6.29e+01      0      3        8.33e-04     1.14e+06              
       2  3.05e+05  5.01e+04  2.22e-01  1.18e+05    3.51e+01      0      9        6.62e-04     2.82e+04              
       3  1.53e+05  2.17e+04  3.52e-01  7.54e+04    4.92e+01      0      10       4.88e-02     7.51e+04              
       4  7.63e+04  7.17e+03  4.69e-01  4.30e+04    5.45e+01      0      9        5.98e-04     5.90e+03              
       5  3.81e+04  4.19e+03  5.45e-01  2.50e+04    4.81e+01      0      10       7.37e-03     3.99e+03              
       6  1.91e+04  1.04e+03  6.01e-01  1.25e+04    3.64e+01      0      5        7.96e-04     1.49e+04              
       7  9.53e+03  1.04e+03  6.01e-01  6.77e+03    4.84e+01      6      10       7.49e-02     1.17e+04              
       8  4.77e+03  4.50e+02  6.52e-01  3.56e+03    4.99e+01      0      10       3.36e-02     1.51e+04              
       9  2.38e+03  4.39e+02  6.55e-01  2.00e+03    3.47e+01      2      10       2.17e-01     4.68e+04              
      10  1.19e+03  3.85e+02  6.78e-01  1.19e+03    3.52e+01      0      10       3.94e-02     4.15e+04              
    Reached starting chifact with l2-norm regularization: Start IRLS steps...
    irls_threshold 0.010189656410434683
    irls_threshold 0.012262010220335882
      11  1.19e+03  3.85e+02  9.25e-01  1.49e+03    6.23e+01     12      10       3.27e-02     4.66e+04              
      12  1.19e+03  3.90e+02  9.77e-01  1.55e+03    6.23e+01      4      10       1.41e-01     2.01e+05              
      13  1.19e+03  4.02e+02  1.01e+00  1.60e+03    3.41e+01      1      10       1.67e+00     1.19e+05              
      14  1.19e+03  3.96e+02  1.02e+00  1.61e+03    3.62e+01      0      10       6.49e-02     1.06e+05              
      15  1.19e+03  3.96e+02  1.06e+00  1.66e+03    5.81e+01      8      10       4.54e-01     2.00e+05              
      16  1.19e+03  4.01e+02  1.05e+00  1.65e+03    5.84e+01      3      10       3.71e-01     1.78e+05              
      17  1.19e+03  4.11e+02  1.00e+00  1.60e+03    3.24e+01      0      10       9.26e-02     3.43e+04              
      18  1.19e+03  4.20e+02  9.80e-01  1.59e+03    3.48e+01      2      10       2.53e-01     2.03e+05              
      19  1.19e+03  4.27e+02  9.36e-01  1.54e+03    6.10e+01      3      10       1.93e-01     2.60e+05              
      20  1.19e+03  4.37e+02  8.66e-01  1.47e+03    6.14e+01      2      10       5.11e-02     8.37e+04              
      21  1.19e+03  4.40e+02  7.75e-01  1.36e+03    3.51e+01      0      10       1.35e-01     1.75e+05              
      22  1.19e+03  4.52e+02  7.40e-01  1.33e+03    3.12e+01      2      10       7.50e-02     1.99e+04              
      23  9.74e+02  4.30e+02  6.79e-01  1.09e+03    6.10e+01      0      10       1.20e-02     1.57e+04              
      24  9.74e+02  4.39e+02  6.27e-01  1.05e+03    3.18e+01      2      10       5.60e-01     1.05e+05              
      25  9.74e+02  4.42e+02  5.47e-01  9.75e+02    3.59e+01      0      10       1.06e-02     1.17e+04              
      26  8.07e+02  4.40e+02  4.93e-01  8.37e+02    6.11e+01      0      10       8.67e-03     7.87e+03              
      27  6.69e+02  4.19e+02  4.33e-01  7.08e+02    6.22e+01      1      10       1.29e-02     2.29e+04              
      28  6.69e+02  4.08e+02  3.75e-01  6.59e+02    3.41e+01      0      10       8.67e-02     3.43e+04              
      29  6.69e+02  4.09e+02  3.05e-01  6.13e+02    3.35e+01      0      10       3.49e-02     6.62e+03              
      30  6.69e+02  4.05e+02  2.52e-01  5.74e+02    6.20e+01      0      10       5.50e-03     4.65e+03              
    Reach maximum number of IRLS cycles: 20
    ------------------------- STOP! -------------------------
    1 : |fc-fOld| = 1.0710e+01 <= tolF*(1+|f0|) = 9.1151e+05
    1 : |xc-x_last| = 3.4604e-03 <= tolX*(1+|x0|) = 1.0075e-01
    0 : |proj(x-g)-x|    = 6.2007e+01 <= tolG          = 1.0000e-03
    0 : |proj(x-g)-x|    = 6.2007e+01 <= 1e3*eps       = 1.0000e-03
    0 : maxIter   =     100    <= iter          =     30
    ------------------------- DONE! -------------------------






|

.. code-block:: Python


    from discretize import TensorMesh
    from discretize.utils import active_from_xyz
    from simpeg import (
        utils,
        maps,
        regularization,
        data_misfit,
        optimization,
        inverse_problem,
        directives,
        inversion,
    )
    from simpeg.potential_fields import magnetics
    import numpy as np
    import matplotlib.pyplot as plt


    def run(plotIt=True):
        h0_amplitude, h0_inclination, h0_declination = (50000.0, 90.0, 0.0)

        # Create a mesh
        dx = 5.0

        hxind = [(dx, 5, -1.3), (dx, 10), (dx, 5, 1.3)]
        hyind = [(dx, 5, -1.3), (dx, 10), (dx, 5, 1.3)]
        hzind = [(dx, 5, -1.3), (dx, 10)]

        mesh = TensorMesh([hxind, hyind, hzind], "CCC")

        # Lets create a simple Gaussian topo and set the active cells
        [xx, yy] = np.meshgrid(mesh.nodes_x, mesh.nodes_y)
        zz = -np.exp((xx**2 + yy**2) / 75**2) + mesh.nodes_z[-1]

        # We would usually load a topofile
        topo = np.c_[utils.mkvc(xx), utils.mkvc(yy), utils.mkvc(zz)]

        # Go from topo to array of indices of active cells
        actv = active_from_xyz(mesh, topo, "N")
        nC = int(actv.sum())
        # Create and array of observation points
        xr = np.linspace(-20.0, 20.0, 20)
        yr = np.linspace(-20.0, 20.0, 20)
        X, Y = np.meshgrid(xr, yr)

        # Move the observation points 5m above the topo
        Z = -np.exp((X**2 + Y**2) / 75**2) + mesh.nodes_z[-1] + 5.0

        # Create a MAGsurvey
        rxLoc = np.c_[utils.mkvc(X.T), utils.mkvc(Y.T), utils.mkvc(Z.T)]
        rxLoc = magnetics.Point(rxLoc)
        srcField = magnetics.UniformBackgroundField(
            receiver_list=[rxLoc],
            amplitude=h0_amplitude,
            inclination=h0_inclination,
            declination=h0_declination,
        )
        survey = magnetics.Survey(srcField)

        # We can now create a susceptibility model and generate data
        model = np.zeros(mesh.nC)

        # Change values in half the domain
        model[mesh.gridCC[:, 0] < 0] = 0.01

        # Add a block in half-space
        model = utils.model_builder.add_block(
            mesh.gridCC, model, np.r_[-10, -10, 20], np.r_[10, 10, 40], 0.05
        )

        model = utils.mkvc(model)
        model = model[actv]

        # Create active map to go from reduce set to full
        actvMap = maps.InjectActiveCells(mesh, actv, np.nan)

        # Create reduced identity map
        idenMap = maps.IdentityMap(nP=nC)

        # Create the forward model operator
        prob = magnetics.Simulation3DIntegral(
            mesh,
            survey=survey,
            chiMap=idenMap,
            active_cells=actv,
            store_sensitivities="forward_only",
        )

        # Compute linear forward operator and compute some data
        data = prob.make_synthetic_data(
            model, relative_error=0.0, noise_floor=1, add_noise=True
        )

        # Create a homogenous maps for the two domains
        domains = [mesh.gridCC[actv, 0] < 0, mesh.gridCC[actv, 0] >= 0]
        homogMap = maps.SurjectUnits(domains)

        # Create a wire map for a second model space, voxel based
        wires = maps.Wires(("homo", len(domains)), ("hetero", nC))

        # Create Sum map
        sumMap = maps.SumMap([homogMap * wires.homo, wires.hetero])

        # Create the forward model operator
        prob = magnetics.Simulation3DIntegral(
            mesh, survey=survey, chiMap=sumMap, active_cells=actv, store_sensitivities="ram"
        )

        # Make sensitivity weighting
        # Take the cell number out of the scaling.
        # Want to keep high sens for large volumes
        wr = (
            prob.getJtJdiag(np.ones(sumMap.shape[1]))
            / np.r_[homogMap.P.T * mesh.cell_volumes[actv], mesh.cell_volumes[actv]] ** 2.0
        )
        # Scale the model spaces independently
        wr[wires.homo.index] /= np.max((wires.homo * wr)) * utils.mkvc(
            homogMap.P.sum(axis=0).flatten()
        )
        wr[wires.hetero.index] /= np.max(wires.hetero * wr)
        wr = wr**0.5

        ## Create a regularization
        # For the homogeneous model
        regMesh = TensorMesh([len(domains)])

        reg_m1 = regularization.Sparse(regMesh, mapping=wires.homo)
        reg_m1.set_weights(weights=wires.homo * wr)

        reg_m1.norms = [0, 2]
        reg_m1.reference_model = np.zeros(sumMap.shape[1])

        # Regularization for the voxel model
        reg_m2 = regularization.Sparse(
            mesh, active_cells=actv, mapping=wires.hetero, gradient_type="components"
        )
        reg_m2.set_weights(weights=wires.hetero * wr)

        reg_m2.norms = [0, 0, 0, 0]
        reg_m2.reference_model = np.zeros(sumMap.shape[1])

        reg = reg_m1 + reg_m2

        # Data misfit function
        dmis = data_misfit.L2DataMisfit(simulation=prob, data=data)

        # Add directives to the inversion
        opt = optimization.ProjectedGNCG(
            maxIter=100,
            lower=0.0,
            upper=1.0,
            maxIterLS=20,
            cg_maxiter=10,
            cg_rtol=1e-3,
            tolG=1e-3,
            eps=1e-6,
        )
        invProb = inverse_problem.BaseInvProblem(dmis, reg, opt)
        betaest = directives.BetaEstimate_ByEig(beta0_ratio=1e-2)

        # Here is where the norms are applied
        # Use pick a threshold parameter empirically based on the distribution of
        #  model parameters
        IRLS = directives.UpdateIRLS(f_min_change=1e-3)

        update_Jacobi = directives.UpdatePreconditioner()
        inv = inversion.BaseInversion(invProb, directiveList=[IRLS, betaest, update_Jacobi])

        # Run the inversion
        m0 = np.ones(sumMap.shape[1]) * 1e-4  # Starting model
        prob.model = m0
        mrecSum = inv.run(m0)
        if plotIt:
            mesh.plot_3d_slicer(
                actvMap * model,
                aspect="equal",
                zslice=30,
                pcolor_opts={"cmap": "inferno_r"},
                transparent="slider",
            )

            mesh.plot_3d_slicer(
                actvMap * sumMap * mrecSum,
                aspect="equal",
                zslice=30,
                pcolor_opts={"cmap": "inferno_r"},
                transparent="slider",
            )


    if __name__ == "__main__":
        run()
        plt.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 22.429 seconds)

**Estimated memory usage:**  342 MB


.. _sphx_glr_download_content_user-guide_examples_01-maps_plot_sumMap.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_sumMap.ipynb <plot_sumMap.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_sumMap.py <plot_sumMap.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_sumMap.zip <plot_sumMap.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
